Refreshing and updating content

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 #headerBg {
-  background-image: url("https://img.freepik.com/free-photo/abstract-luxury-blur-dark-grey-black-gradient-used-as-background-studio-wall-display-your-products-plain-studio-background_1258-54444.jpg?w=1380&t=st=1668999483~exp=1669000083~hmac=3a6ba4d649c49874313b0d00d406014a11e1222d068214a0aad563f84dd3c53e");
+  background-color: white;
 }
 
 li {
